--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,7 +26,8 @@
 		"outDir": "./dist",
 		"baseUrl": "./",
 		"paths": {
-			"$/*": ["src/*"]
+			"#/*": ["src/entities/*", "src/modules/*"],
+			"$$": ["src/services/index"]
 		},
 		"strictPropertyInitialization": false
 	},
