--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
+    "graphql-query-complexity": "^0.11.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
