--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
     "graphql-query-complexity": "^0.11.0",
@@ -43,6 +44,7 @@
     "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.6.13",
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
